Split up overview page into multiple components
Signed-off-by: Severin Kaderli <severin@kaderli.dev>

--- a/webapp/src/scss/_variables.scss
+++ b/webapp/src/scss/_variables.scss
@@ -1,4 +1,7 @@
 :root {
+  --primary: #7289da;
+  --secondary: #ff4c4c;
+
   --color-background: #36393F;
   --color-background-input: #484C52;
   --color-text: #FFF;
