Move card list to a separate component
Signed-off-by: Severin Kaderli <severin@kaderli.dev>

--- a/webapp/src/scss/_input.scss
+++ b/webapp/src/scss/_input.scss
@@ -21,6 +21,11 @@ select:active {
   outline: none;
 }
 
+input[type="radio"],
+input[type="check"] {
+  width: auto;
+}
+
 *:focus {
   outline: 1px solid #FFF;
 }
