--- a/webapp/src/scss/_variables.scss
+++ b/webapp/src/scss/_variables.scss
@@ -14,6 +14,7 @@
   // Colors for foreground usage
   --color-foreground: #2b2c31;
   --color-foreground-dark: #222429;
+  --color-foreground-border: var(--color-background-input);
 
   --color-text: #FFF;
   --color-text-light: #CCC;
